--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="notification" style="display: none; position:fixed; width: 100vw; height: 100vh; background-color: white; opacity: 0.5; z-index: 10;"></div>
+    <div id="notification" style="display: none; position:fixed; width: 100vw; height: 100vh; background-color: white; opacity: 0.5; z-index: 100000000000000000000000;"></div>
     <div id="root" style="z-index: 1;"></div>
     
     <!--
